--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "ImanBot-Md",
+        "author": "IMAN TEKNOLOGI CANGGIH"
     }
 }
